Trying to fix white space on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -12,7 +12,6 @@
   grid-template-rows: 10% 90%;
   background: url("../assets/home/background-home-mobile.jpg") no-repeat center;
   background-size: cover;
-  overflow: auto;
 
   @import "./navbar.scss";
   @import "./home.scss";
@@ -27,7 +26,6 @@
   background: url("../assets/destination/background-destination-mobile.jpg")
     no-repeat center;
   background-size: cover;
-  overflow: auto;
 
   @import "./navbar.scss";
   @import "./home.scss";
