--- a/src/styles/destination.scss
+++ b/src/styles/destination.scss
@@ -8,8 +8,6 @@
     height: 100%;
     color: #fff;
     text-align: center;
-    box-sizing: border-box;
-    padding: 30px 0;
     h2 {
       font-family: "Barlow Condensed";
       font-size: 16px;
@@ -29,7 +27,6 @@
       justify-content: center;
       align-items: center;
       gap: 20px;
-      margin-top: 20px;
       .images {
         img {
           animation: transitionIn 700ms;
